--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-	<script src="../vendor/bootstrap-4.0.0-alpha.6/dist/js/bootstrap.min.js"></script>
+	<script src="vendor/bootstrap-4.0.0-alpha.6/dist/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-	<script src="../vendor/js/ie10-viewport-bug-workaround.js"></script>
+	<script src="vendor/ie10/ie10-viewport-bug-workaround.js"></script>
 	<script src="dist/scripts/scripts.js"></script>
 </body>	
 </html>
