Layout stuff and things.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<div class="jumbotron jumbotron-fluid mb-0">
 		<div class="container">
-			<h1 class="display-3">The Blank Signal</h1>
+			<h1 class="display-3 text-center">The Blank Signal</h1>
+			<h2 class="text-center"><i class="fa fa-superpowers fa-3x" aria-hidden="true"></i></h2>
 			<p class="lead">Choose the proper superhero for your current calamity and we'll activate their signal against the ever-present clouds above our city.</p>
 		</div>
 	</div>
@@ -23,11 +24,42 @@
 			<div class="content pt-3">
 				<div class="container">
 					<p class="lead">This is a lead paragraph.</p>
-					<p><i class="fa fa-superpowers" aria-hidden="true"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula tincidunt cursus. Donec ut tincidunt ligula. Proin non massa vehicula, suscipit tortor in, rhoncus metus. Vivamus condimentum diam ac diam faucibus, at suscipit odio posuere. Pellentesque et gravida quam.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula tincidunt cursus. Donec ut tincidunt ligula. Proin non massa vehicula, suscipit tortor in, rhoncus metus. Vivamus condimentum diam ac diam faucibus, at suscipit odio posuere. Pellentesque et gravida quam.</p>
 <pre>
 This is a bit of monospaced text.
 </pre>
 					<p>Pellentesque pharetra lacus lacus, a placerat neque gravida in. Donec posuere scelerisque sapien. Sed metus dolor, consequat id lorem et, pellentesque molestie massa. Nam mollis faucibus ex, id molestie felis malesuada vitae. Fusce convallis nibh tortor. Nullam posuere, nisi at feugiat mollis, elit purus auctor ante, sed dignissim nisi nunc sed augue.</p>
+
+					<div class="card border-danger mb-3">
+						<h4 class="card-header bg-danger"><i class="fa fa-superpowers mr-3" aria-hidden="true"></i>Some Hero</h4>
+						<div class="card-body">
+							<h4 class="card-title">Special title treatment</h4>
+							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+						<ul class="list-group text-white">
+							<li class="list-group-item bg-dark"><span class="badge badge-danger">5</span> Cras justo odio</li>
+							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Dapibus ac facilisis in</li>
+							<li class="list-group-item bg-dark"><span class="badge badge-success">5</span> Morbi leo risus</li>
+							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Porta ac consectetur ac</li>
+							<li class="list-group-item bg-dark"><span class="badge badge-info">5</span> Vestibulum at eros</li>
+						</ul>
+						</div>
+					</div>
+					<div class="card border-info mb-3">
+						<h4 class="card-header bg-info"><i class="fa fa-superpowers mr-3" aria-hidden="true"></i>Some Hero</h4>
+						<div class="card-body">
+							<h4 class="card-title">Special title treatment</h4>
+							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+						<ul class="list-group text-white">
+							<li class="list-group-item bg-dark"><span class="badge badge-danger">5</span> Cras justo odio</li>
+							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Dapibus ac facilisis in</li>
+							<li class="list-group-item bg-dark"><span class="badge badge-success">5</span> Morbi leo risus</li>
+							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Porta ac consectetur ac</li>
+							<li class="list-group-item bg-dark"><span class="badge badge-info">5</span> Vestibulum at eros</li>
+						</ul>
+						</div>
+					</div>
+
+					<hr>
 				</div>
 			</div>
 		</div>
