--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@ This is a bit of monospaced text.
 							<h4 class="card-title">Special title treatment</h4>
 							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 						<ul class="list-group text-white">
-							<li class="list-group-item bg-dark"><span class="badge badge-danger">5</span> Cras justo odio</li>
-							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Dapibus ac facilisis in</li>
-							<li class="list-group-item bg-dark"><span class="badge badge-success">5</span> Morbi leo risus</li>
-							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Porta ac consectetur ac</li>
-							<li class="list-group-item bg-dark"><span class="badge badge-info">5</span> Vestibulum at eros</li>
+							<li class="list-group-item bg-dark">Cost<div class="pull-right"><span class="badge badge-success">57</span></div></li>
+							<li class="list-group-item bg-secondary">Ice<div class="pull-right"><span class="badge badge-primary">5</span></div></li>
+							<li class="list-group-item bg-dark">Travel: Sliding<div class="pull-right"><span class="badge badge-primary">5</span></div></li>
+							<li class="list-group-item bg-secondary">Durability<div class="pull-right"><span class="badge badge-dark">5</span></div></li>
 						</ul>
 						</div>
 					</div>
@@ -50,11 +49,10 @@ This is a bit of monospaced text.
 							<h4 class="card-title">Special title treatment</h4>
 							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 						<ul class="list-group text-white">
-							<li class="list-group-item bg-dark"><span class="badge badge-danger">5</span> Cras justo odio</li>
-							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Dapibus ac facilisis in</li>
-							<li class="list-group-item bg-dark"><span class="badge badge-success">5</span> Morbi leo risus</li>
-							<li class="list-group-item bg-secondary"><span class="badge badge-primary">5</span> Porta ac consectetur ac</li>
-							<li class="list-group-item bg-dark"><span class="badge badge-info">5</span> Vestibulum at eros</li>
+							<li class="list-group-item bg-dark">Cost<div class="pull-right"><span class="badge badge-success">57</span></div></li>
+							<li class="list-group-item bg-secondary">Fire<div class="pull-right"><span class="badge badge-danger">5</span></div></li>
+							<li class="list-group-item bg-dark">Strength<div class="pull-right"><span class="badge badge-primary">3</span></div></li>
+							<li class="list-group-item bg-secondary">Durability<div class="pull-right"><span class="badge badge-dark">2</span></div></li>
 						</ul>
 						</div>
 					</div>
