Cleaning up initial setup.

--- a/index.html
+++ b/index.html
@@ -25,43 +25,9 @@
 				<div class="container">
 					<p class="lead">This is a lead paragraph.</p>
 
-					<hr>
-					<div id="dynabutton"></div>
-					<hr>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula tincidunt cursus. Donec ut tincidunt ligula. Proin non massa vehicula, suscipit tortor in, rhoncus metus. Vivamus condimentum diam ac diam faucibus, at suscipit odio posuere. Pellentesque et gravida quam.</p>
-<pre>
-This is a bit of monospaced text.
-</pre>
-					<p>Pellentesque pharetra lacus lacus, a placerat neque gravida in. Donec posuere scelerisque sapien. Sed metus dolor, consequat id lorem et, pellentesque molestie massa. Nam mollis faucibus ex, id molestie felis malesuada vitae. Fusce convallis nibh tortor. Nullam posuere, nisi at feugiat mollis, elit purus auctor ante, sed dignissim nisi nunc sed augue.</p>
 
-					<div class="card border-danger mb-3">
-						<h4 class="card-header bg-danger"><i class="fa fa-superpowers mr-3" aria-hidden="true"></i>Some Hero</h4>
-						<div class="card-body">
-							<h4 class="card-title">Special title treatment</h4>
-							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-						<ul class="list-group text-white">
-							<li class="list-group-item bg-dark">Cost<div class="pull-right"><span class="badge badge-success">57</span></div></li>
-							<li class="list-group-item bg-secondary">Ice<div class="pull-right"><span class="badge badge-primary">5</span></div></li>
-							<li class="list-group-item bg-dark">Travel: Sliding<div class="pull-right"><span class="badge badge-primary">5</span></div></li>
-							<li class="list-group-item bg-secondary">Durability<div class="pull-right"><span class="badge badge-dark">5</span></div></li>
-						</ul>
-						</div>
-					</div>
-					<div class="card border-info mb-3">	
-						<h4 class="card-header bg-info"><i class="fa fa-superpowers mr-3" aria-hidden="true"></i>Some Hero</h4>
-						<div class="card-body">
-							<h4 class="card-title">Special title treatment</h4>
-							<p class="card-text">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-						<ul class="list-group text-white">
-							<li class="list-group-item bg-dark">Cost<div class="pull-right"><span class="badge badge-success">57</span></div></li>
-							<li class="list-group-item bg-secondary">Fire<div class="pull-right"><span class="badge badge-danger">5</span></div></li>
-							<li class="list-group-item bg-dark">Strength<div class="pull-right"><span class="badge badge-primary">3</span></div></li>
-							<li class="list-group-item bg-secondary">Durability<div class="pull-right"><span class="badge badge-dark">2</span></div></li>
-						</ul>
-						</div>
-					</div>
-
-					<hr>
+					<div id="blank-signal"></div>
 				</div>
 			</div>
 		</div>
