Loading spinner install

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="loading">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -27,7 +27,12 @@
 
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula tincidunt cursus. Donec ut tincidunt ligula. Proin non massa vehicula, suscipit tortor in, rhoncus metus. Vivamus condimentum diam ac diam faucibus, at suscipit odio posuere. Pellentesque et gravida quam.</p>
 
-					<div id="blank-signal"></div>
+					<div class="page-load text-center">
+						<div id="page-load-spinner" class="page-load-spinner display-1 mb-3"><i class="fa fa-spinner fa-spin fa-2x" aria-hidden="true"></i></div>
+						<h3>Loading App...</h3>
+					</div>
+
+					<div id="blank-signal" class="app-wrap"></div>
 				</div>
 			</div>
 		</div>
